feat(sc-222): export the pkm img host and img dir path to an env var

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ DATABASE_HOST=localhost
 DATABASE_USER=root
 DATABASE_PASS=root
 DATABASE_NAME=pokedex
+
+POKEMON_IMAGE_HOST=https://www.serebii.net/pokemon/art
+IMAGE_DIR_PATH=./downloads
